remove simplebar (non-react) and fix various scrollbar alignment issues

--- a/web/css/layers.css
+++ b/web/css/layers.css
@@ -517,6 +517,7 @@
   bottom: auto;
   border-radius: 6px;
   position: absolute;
+  width: 500px;
 }
 
 .layer-settings-modal .modal-title {
